--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-error-overlay": "6.0.9",
     "react-paginate": "8.1.2",
+    "react-router-dom": "6.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "8.2.0",
     "sass": "1.49.10",
